      same vertical adjustment as ordinary text, so using ordinary and
      plotmath on the same margin line will seem better aligned (but not
      exactly aligned, since ordinary text has descenders below the
      baseline and plotmath places them on the baseline).  (Related to
      \PR{14537}.)

      \item \code{sunflowerplot()} now has a formula interface.
      (Wish of \PR{14541}.)
    }
  }

  \subsection{SWEAVE & VIGNETTES}{
    \itemize{
      \item User-defined numeric (with names starting \code{n_}) and
      character (starting \code{ch_}) options are now allowed in
      \code{Sweave()}: as before all other unknown options are taken to
      be logical.

      \item \code{Sweave()} and \code{Stangle()} gain an \code{encoding}
      argument to specify the encoding of the vignette sources if the
      latter do not contain a \samp{\\usepackage[]{inputenc}} statement
      specifying a single input encoding.

      \item Package installation tangles the vignette sources: this step
      now converts the vignette sources from the vignette/package
      encoding to the current encoding, and records the encoding (if not
      ASCII) in a comment line at the top of the installed \file{.R}
      file.

      \item The preferred location for vignette sources is now the
      directory \file{vignettes} and not \file{inst/doc}: \command{R CMD
	build} will now re-build vignettes in \file{vignettes} and copy
      the \file{.Rnw} (etc) files and the corresponding PDFs to
      \file{inst/doc}.

      \item \command{R CMD Sweave} now supports a \option{--driver}
      option to select the Sweave driver: the default is equivalent to
      \option{--driver=RweaveLatex}.  Also a \option{--encoding} option.

      \item The \code{RweaveLatex()} driver now normally only runs each
      figure chunk once for each device (and hence by default once for a
      PDF figure).  The new options \code{persistent.graphics=TRUE}