@@ -7,9 +7,9 @@ export("Rd2HTML", "Rd2ex", "Rd2latex", "Rd2txt", "Rd2txt_options",
        "codocClasses", "codocData", "md5sum", "undoc", "file_ext",
        "file_path_as_absolute", "file_path_sans_ext",
        "list_files_with_exts", "findHTMLlinks",
-       "list_files_with_type", "showNonASCII", "delimMatch",
-       "parse_Rd", "checkRd", "texi2dvi", "buildVignettes",
-       "pkgVignettes", "pkgDepends", "getDepList",
+       "list_files_with_type", "showNonASCII", "showNonASCIIfile",
+       "delimMatch", "parse_Rd", "checkRd", "texi2dvi",
+       "buildVignettes", "pkgVignettes", "pkgDepends", "getDepList",
        "installFoundDepends", "vignetteDepends", "write_PACKAGES",
        "xgettext", "xgettext2pot", "xngettext",
        "encoded_text_to_latex", "charset_to_Unicode", "Adobe_glyphs",
